# marktoflow

./: .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  FRAMEWORK_ANALYSIS.md  GEMINI.md  LICENSE  PRD.md  PROGRESS.md  README.md  TODO.md  aiworkflow.yaml  marktoflow  marktoflow.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test-debug-workflow.md  tsconfig.json  turbo.json
.aiworkflow/agents/: capabilities.yaml
.aiworkflow/tools/: registry.yaml
.aiworkflow/workflows/: email-triage.md
.claude/skills/: marktoflow-workflow-builder.md
.github/workflows/: ci.yml
.marktoflow/agents/: capabilities.yaml
.marktoflow/tools/: registry.yaml
.marktoflow/workflows/: email-triage.md  hello-world.md  test-simple.md
docs/: CONTROL-FLOW-GUIDE.md  COPILOT_SDK_ANALYSIS.md  DETAILED-GUIDE.md  GUI_API_REFERENCE.md  GUI_DEVELOPER_GUIDE.md  GUI_USER_GUIDE.md  INSTALLATION.md  OPENCODE.md  PLAYWRIGHT-GUIDE.md  PUBLISHING.md  REST-API-GUIDE.md  SETUP_CLAUDE_CODE.md  SETUP_GITHUB_COPILOT.md  SETUP_OLLAMA.md  STREAMING_STATUS.md  TEMPLATE-EXPRESSIONS.md  YAML-API.md
docs/archived/: PROGRESS.md  PYTHON_V1_HISTORY.md  TODO.md  V2_STATUS_TRACKING.md
docs/yaml-api/: ai-agents.md  control-flow.md
examples/: README.md  code-review.md  copilot-simple-test.md  incident-response.md  rest-api-demo.md  sprint-planning.md
examples/agent-task-executor/: README.md  workflow-slack.md  workflow-telegram.md
examples/claude-agent-sdk/: workflow.md
examples/claude-code-config/: README.md  workflow.md
examples/code-review/: README.md  config.yaml  tools.yaml  workflow.md
examples/codebase-qa/: README.md  workflow-slack.md  workflow-telegram.md
examples/codex-config/: README.md  workflow.md
examples/control-flow/: data-pipeline.md  error-handling.md  incident-router.md  parallel-fetch.md  polling-loop.md
examples/copilot-code-review/: .env.example  README.md  workflow.md
scripts/: test-install.sh  test-packages.js  verify-install.sh
tests/: __init__.py  conftest.py  test_bundle.py  test_costs.py  test_credentials.py  test_engine.py  test_filewatcher.py  test_logging.py  test_metrics.py  test_ollama_adapter.py  test_parser.py  test_plugins.py  test_queue.py  test_rollback.py  test_routing.py  test_scheduler.py  test_script_tool.py  test_security.py  test_state.py  test_templates.py  test_webhook.py
(+119 files in other folders)
